fix icons, add custom scrollbar

--- a/src/components/WaterRatioPanelItem/WaterRatioPanelItem.module.css
+++ b/src/components/WaterRatioPanelItem/WaterRatioPanelItem.module.css
@@ -7,6 +7,21 @@
     padding: 0px 8px;
 }
 
+::-webkit-scrollbar {
+    height: 100%;
+    width: 4px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #D7E3FF;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #9EBBFF;
+    border-radius: 8px;
+    border: 1px solid #9EBBFF;
+}
+
 .operationContainer {
     display: flex;
     flex-direction: row;
@@ -61,8 +76,8 @@
 .notebook {
     fill: transparent;
     stroke: #9EBBFF;
-    width: 12.5px;
-    height: 12.5px;
+    width: 16px;
+    height: 16px;
     padding-bottom: 1px;
     border-bottom: 1px solid transparent;
 }
@@ -75,8 +90,8 @@
 .trashbox {
     fill: transparent;
     stroke: #EF5050;
-    width: 11px;
-    height: 13px;
+    width: 16px;
+    height: 16px;
     padding-bottom: 1px;
     border-bottom: 1px solid transparent;
 }
